# ChangeLog for media-sound/rhythmbox
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.245 2013/09/13 20:42:56 nirbheek Exp $

*rhythmbox-3.0-r1 (13 Sep 2013)

  13 Sep 2013; Nirbheek Chauhan <nirbheek@gentoo.org>
  +files/rhythmbox-3.0-gdbus-return-value.patch,
  +files/rhythmbox-3.0-rbzeitgeist-python3.patch, +rhythmbox-3.0-r1.ebuild,
  -rhythmbox-3.0.ebuild:
  Fix a hang (reported by pva), fix deps, and port a plugin to Python 3

*rhythmbox-3.0 (13 Sep 2013)

  13 Sep 2013; Nirbheek Chauhan <nirbheek@gentoo.org> +rhythmbox-3.0.ebuild,
  metadata.xml:
  Bump to 3.0

  30 Aug 2013; Gilles Dartiguelongue <eva@gentoo.org>
  rhythmbox-0.12.8-r1.ebuild, rhythmbox-2.99.1.ebuild:
  Depend on libsoup-gnome again, clean up old revisions.

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org>
  -files/rhythmbox-2.95-fix-db-dbus-interface.patch,
  -files/rhythmbox-2.95-port-im-status-plugin.patch,
  -files/rhythmbox-2.95-port-rb-set-rating-py-example.patch,
  -rhythmbox-0.13.3.ebuild, -rhythmbox-2.97.ebuild, -rhythmbox-2.98.ebuild,
  metadata.xml:
  drop old

*rhythmbox-2.99.1 (22 Apr 2013)

  22 Apr 2013; Pacho Ramos <pacho@gentoo.org> +rhythmbox-2.99.1.ebuild,
  metadata.xml:
  Version bump

  31 Mar 2013; Pacho Ramos <pacho@gentoo.org> rhythmbox-0.12.8-r1.ebuild,
  rhythmbox-0.13.3.ebuild, rhythmbox-2.97.ebuild, rhythmbox-2.98.ebuild:
  Adapt to libsoup-2.42 dropping gnome USE and splitting (#463702)

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> rhythmbox-2.97.ebuild,
  rhythmbox-2.98.ebuild:
  Add ~arm, wrt bug #449220

  08 Jan 2013; Denis Dupeyron <calchan@gentoo.org> rhythmbox-2.97.ebuild:
  Only build against brasero-3.4* with USE=cdr, because older is too old and
  more recent links against gstreamer 1.0 which conflicts with rhythmbox being
  built against gstreamer 0.10.

  07 Jan 2013; Denis Dupeyron <calchan@gentoo.org> rhythmbox-2.97.ebuild: