@@ -1,14 +1,13 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/rhythmbox-3.0-r1.ebuild,v 1.1 2013/09/13 20:42:56 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/rhythmbox-3.0-r1.ebuild,v 1.2 2013/09/15 20:43:04 nirbheek Exp $
 
-EAPI="4"
+EAPI="5"
 GNOME2_LA_PUNT="yes"
-PYTHON_DEPEND="python? 3:3.2"
-PYTHON_USE_WITH="xml"
-PYTHON_USE_WITH_OPT="python"
+PYTHON_COMPAT=( python3_2 )
+PYTHON_REQ_USE="xml"
 
-inherit eutils gnome2 python multilib virtualx
+inherit eutils gnome2 python-single-r1 multilib virtualx
 
 DESCRIPTION="Music management and playback software for GNOME"
 HOMEPAGE="http://www.rhythmbox.org/"
@@ -17,11 +16,7 @@ LICENSE="GPL-2"
 SLOT="0"
 IUSE="cdr daap dbus doc +libsecret html ipod libnotify lirc mtp nsplugin +python
 test +udev upnp-av visualizer webkit zeitgeist"
-if [[ ${PV} = 9999 ]]; then
-	KEYWORDS=""
-else
-	KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
-fi
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 
 REQUIRED_USE="
 	ipod? ( udev )
@@ -33,8 +28,8 @@ REQUIRED_USE="
 # webkit-gtk-1.10 is needed because it uses gstreamer-1.0
 #
 # To add support for libdmapsharing-2.9.19, use commit 	92d75eaa from git
-COMMON_DEPEND=">=dev-libs/glib-2.34.0:2
-	dev-libs/json-glib
+COMMON_DEPEND="
+	>=dev-libs/glib-2.34.0:2
 	>=dev-libs/libxml2-2.7.8:2
 	>=x11-libs/gtk+-3.6:3[introspection]
 	>=x11-libs/gdk-pixbuf-2.18.0:2
@@ -43,9 +38,10 @@ COMMON_DEPEND=">=dev-libs/glib-2.34.0:2
 	>=dev-libs/totem-pl-parser-3.2.0
 	>=net-libs/libsoup-2.26:2.4
 	>=net-libs/libsoup-gnome-2.26:2.4
-	>=media-libs/gst-plugins-base-0.11.92:1.0[introspection]
-	>=media-libs/gstreamer-1.0.0:1.0[introspection]
+	media-libs/gst-plugins-base:1.0[introspection]
+	media-libs/gstreamer:1.0[introspection]
 	>=sys-libs/tdb-1.2.6
+	dev-libs/json-glib
 
 	visualizer? (
 		>=media-libs/clutter-1.8:1.0
@@ -62,7 +58,7 @@ COMMON_DEPEND=">=dev-libs/glib-2.34.0:2
 	html? ( >=net-libs/webkit-gtk-1.10:3 )
 	libnotify? ( >=x11-libs/libnotify-0.7.0 )
 	lirc? ( app-misc/lirc )
-	python? ( >=dev-python/pygobject-3.0:3 )
+	python? ( >=dev-python/pygobject-3.0:3[${PYTHON_USEDEP}] )
 	udev? (
 		virtual/udev[gudev]
 		ipod? ( >=media-libs/libgpod-0.7.92[udev] )
@@ -89,7 +85,7 @@ RDEPEND="${COMMON_DEPEND}
 		dbus? ( sys-apps/dbus )
 		libsecret? ( >=app-crypt/libsecret-0.14[introspection] )
 		webkit? (
-			dev-python/mako
+			dev-python/mako[${PYTHON_USEDEP}]
 			>=net-libs/webkit-gtk-1.10:3[introspection] ) )
 "
 # gtk-doc-am needed for eautoreconf
@@ -101,45 +97,15 @@ DEPEND="${COMMON_DEPEND}
 	>=app-text/gnome-doc-utils-0.9.1
 	doc? ( >=dev-util/gtk-doc-1.4 )
 	test? ( dev-libs/check )"
-DOCS="AUTHORS ChangeLog DOCUMENTERS INTERNALS \
-	  MAINTAINERS MAINTAINERS.old NEWS README THANKS"
 
 pkg_setup() {
-	if use python; then
-		python_set_active_version 3
-		python_pkg_setup
-		G2CONF="${G2CONF} PYTHON=$(PYTHON -3)"
-	fi
-
-	# --enable-vala just installs the sample vala plugin, and the configure
-	# checks are broken, so don't enable it
-	G2CONF="${G2CONF}
-		MOZILLA_PLUGINDIR=/usr/$(get_libdir)/nsbrowser/plugins
-		--enable-mmkeys
-		--disable-more-warnings
-		--disable-schemas-compile
-		--disable-static
-		--disable-vala
-		--without-hal
-		$(use_enable visualizer)
-		$(use_enable daap)
-		$(use_enable libnotify)
-		$(use_enable lirc)
-		$(use_enable nsplugin browser-plugin)
-		$(use_enable python)
-		$(use_enable upnp-av grilo)
-		$(use_with cdr brasero)
-		$(use_with daap)
-		$(use_with libsecret)
-		$(use_with html webkit)
-		$(use_with ipod)
-		$(use_with mtp)
-		$(use_with udev gudev)"
-
-	export GST_INSPECT=/bin/true
+	use python && python-single-r1_pkg_setup
 }
 
 src_prepare() {
+	DOCS="AUTHORS ChangeLog DOCUMENTERS INTERNALS \
+		MAINTAINERS MAINTAINERS.old NEWS README THANKS"
+
 	# https://bugzilla.gnome.org/show_bug.cgi?id=706470
 	# In git, remove for bump
 	epatch "${FILESDIR}/${P}-gdbus-return-value.patch"
@@ -147,8 +113,37 @@ src_prepare() {
 	# https://bugzilla.gnome.org/show_bug.cgi?id=708044
 	epatch "${FILESDIR}/${P}-rbzeitgeist-python3.patch"
 
+	rm -v lib/rb-marshal.{c,h} || die
 	gnome2_src_prepare
-	echo > py-compile
+}
+
+src_configure() {
+	# FIXME: bug???
+	export GST_INSPECT=/bin/true
+
+	# --enable-vala just installs the sample vala plugin, and the configure
+	# checks are broken, so don't enable it
+	gnome2_src_configure \
+		MOZILLA_PLUGINDIR=/usr/$(get_libdir)/nsbrowser/plugins \
+		VALAC=$(type -P valac-0.14) \
+		--enable-mmkeys \
+		--disable-more-warnings \
+		--disable-static \
+		--disable-vala \
+		--without-hal \
+		$(use_enable visualizer) \
+		$(use_enable daap) \
+		$(use_enable libnotify) \
+		$(use_enable lirc) \
+		$(use_enable nsplugin browser-plugin) \
+		$(use_enable python) \
+		$(use_enable upnp-av grilo) \
+		$(use_with cdr brasero) \
+		$(use_with html webkit) \
+		$(use_with ipod) \
+		$(use_with libsecret) \
+		$(use_with mtp) \
+		$(use_with udev gudev)
 }
 
 src_test() {
@@ -158,19 +153,8 @@ src_test() {
 }
 
 pkg_postinst() {
-	gnome2_pkg_postinst
-	if use python; then
-		python_need_rebuild
-		python_mod_optimize /usr/$(get_libdir)/rhythmbox/plugins
-	fi
-
 	ewarn
 	ewarn "If ${PN} doesn't play some music format, please check your"
 	ewarn "USE flags on media-plugins/gst-plugins-meta:1.0"
 	ewarn
-}
-
-pkg_postrm() {
-	gnome2_pkg_postrm
-	python_mod_cleanup /usr/$(get_libdir)/rhythmbox/plugins
 }
