@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
-DEPEND=>=dev-libs/glib-2.34.0:2 dev-libs/json-glib >=dev-libs/libxml2-2.7.8:2 >=x11-libs/gtk+-3.6:3[introspection] >=x11-libs/gdk-pixbuf-2.18.0:2 >=dev-libs/gobject-introspection-0.10.0 >=dev-libs/libpeas-0.7.3[gtk,python?] >=dev-libs/totem-pl-parser-3.2.0 >=net-libs/libsoup-2.26:2.4 >=net-libs/libsoup-gnome-2.26:2.4 >=media-libs/gst-plugins-base-0.11.92:1.0[introspection] >=media-libs/gstreamer-1.0.0:1.0[introspection] >=sys-libs/tdb-1.2.6 visualizer? ( >=media-libs/clutter-1.8:1.0 >=media-libs/clutter-gst-1.9.92:2.0 >=media-libs/clutter-gtk-1.0:1.0 >=x11-libs/mx-1.0.1:1.0 media-plugins/gst-plugins-libvisual:1.0 ) cdr? ( >=app-cdr/brasero-2.91.90 ) daap? ( >=net-libs/libdmapsharing-2.9.16:3.0 <net-libs/libdmapsharing-2.9.19:3.0 media-plugins/gst-plugins-soup:1.0 ) libsecret? ( >=app-crypt/libsecret-0.14 ) html? ( >=net-libs/webkit-gtk-1.10:3 ) libnotify? ( >=x11-libs/libnotify-0.7.0 ) lirc? ( app-misc/lirc ) python? ( >=dev-python/pygobject-3.0:3 ) udev? ( virtual/udev[gudev] ipod? ( >=media-libs/libgpod-0.7.92[udev] ) mtp? ( >=media-libs/libmtp-0.3 ) ) zeitgeist? ( gnome-extra/zeitgeist ) virtual/pkgconfig app-text/yelp-tools >=dev-util/intltool-0.35 >=app-text/gnome-doc-utils-0.9.1 doc? ( >=dev-util/gtk-doc-1.4 ) test? ( dev-libs/check ) app-arch/xz-utils >=sys-apps/sed-4 python? ( || ( =dev-lang/python-3.3* =dev-lang/python-3.2* ) ) python? ( || ( =dev-lang/python-3.3*[xml] =dev-lang/python-3.2*[xml] ) ) test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
+DEPEND=>=dev-libs/glib-2.34.0:2 >=dev-libs/libxml2-2.7.8:2 >=x11-libs/gtk+-3.6:3[introspection] >=x11-libs/gdk-pixbuf-2.18.0:2 >=dev-libs/gobject-introspection-0.10.0 >=dev-libs/libpeas-0.7.3[gtk,python?] >=dev-libs/totem-pl-parser-3.2.0 >=net-libs/libsoup-2.26:2.4 >=net-libs/libsoup-gnome-2.26:2.4 media-libs/gst-plugins-base:1.0[introspection] media-libs/gstreamer:1.0[introspection] >=sys-libs/tdb-1.2.6 dev-libs/json-glib visualizer? ( >=media-libs/clutter-1.8:1.0 >=media-libs/clutter-gst-1.9.92:2.0 >=media-libs/clutter-gtk-1.0:1.0 >=x11-libs/mx-1.0.1:1.0 media-plugins/gst-plugins-libvisual:1.0 ) cdr? ( >=app-cdr/brasero-2.91.90 ) daap? ( >=net-libs/libdmapsharing-2.9.16:3.0 <net-libs/libdmapsharing-2.9.19:3.0 media-plugins/gst-plugins-soup:1.0 ) libsecret? ( >=app-crypt/libsecret-0.14 ) html? ( >=net-libs/webkit-gtk-1.10:3 ) libnotify? ( >=x11-libs/libnotify-0.7.0 ) lirc? ( app-misc/lirc ) python? ( >=dev-python/pygobject-3.0:3[python_targets_python3_2(-)?,python_single_target_python3_2(+)?] ) udev? ( virtual/udev[gudev] ipod? ( >=media-libs/libgpod-0.7.92[udev] ) mtp? ( >=media-libs/libmtp-0.3 ) ) zeitgeist? ( gnome-extra/zeitgeist ) virtual/pkgconfig app-text/yelp-tools >=dev-util/intltool-0.35 >=app-text/gnome-doc-utils-0.9.1 doc? ( >=dev-util/gtk-doc-1.4 ) test? ( dev-libs/check ) app-arch/xz-utils >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
 DESCRIPTION=Music management and playback software for GNOME
-EAPI=4
+EAPI=5
 HOMEPAGE=http://www.rhythmbox.org/
-IUSE=cdr daap dbus doc +libsecret html ipod libnotify lirc mtp nsplugin +python test +udev upnp-av visualizer webkit zeitgeist debug test
+IUSE=cdr daap dbus doc +libsecret html ipod libnotify lirc mtp nsplugin +python test +udev upnp-av visualizer webkit zeitgeist debug python_targets_python3_2 python_single_target_python3_2 test
 KEYWORDS=~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
-RDEPEND=>=dev-libs/glib-2.34.0:2 dev-libs/json-glib >=dev-libs/libxml2-2.7.8:2 >=x11-libs/gtk+-3.6:3[introspection] >=x11-libs/gdk-pixbuf-2.18.0:2 >=dev-libs/gobject-introspection-0.10.0 >=dev-libs/libpeas-0.7.3[gtk,python?] >=dev-libs/totem-pl-parser-3.2.0 >=net-libs/libsoup-2.26:2.4 >=net-libs/libsoup-gnome-2.26:2.4 >=media-libs/gst-plugins-base-0.11.92:1.0[introspection] >=media-libs/gstreamer-1.0.0:1.0[introspection] >=sys-libs/tdb-1.2.6 visualizer? ( >=media-libs/clutter-1.8:1.0 >=media-libs/clutter-gst-1.9.92:2.0 >=media-libs/clutter-gtk-1.0:1.0 >=x11-libs/mx-1.0.1:1.0 media-plugins/gst-plugins-libvisual:1.0 ) cdr? ( >=app-cdr/brasero-2.91.90 ) daap? ( >=net-libs/libdmapsharing-2.9.16:3.0 <net-libs/libdmapsharing-2.9.19:3.0 media-plugins/gst-plugins-soup:1.0 ) libsecret? ( >=app-crypt/libsecret-0.14 ) html? ( >=net-libs/webkit-gtk-1.10:3 ) libnotify? ( >=x11-libs/libnotify-0.7.0 ) lirc? ( app-misc/lirc ) python? ( >=dev-python/pygobject-3.0:3 ) udev? ( virtual/udev[gudev] ipod? ( >=media-libs/libgpod-0.7.92[udev] ) mtp? ( >=media-libs/libmtp-0.3 ) ) zeitgeist? ( gnome-extra/zeitgeist ) media-plugins/gst-plugins-soup:1.0 media-plugins/gst-plugins-libmms:1.0 || ( media-plugins/gst-plugins-cdparanoia:1.0 media-plugins/gst-plugins-cdio:1.0 ) media-plugins/gst-plugins-meta:1.0 media-plugins/gst-plugins-taglib:1.0 x11-themes/gnome-icon-theme-symbolic upnp-av? ( >=media-libs/grilo-0.2:0.2 >=media-plugins/grilo-plugins-0.2:0.2[upnp-av] ) python? ( x11-libs/gdk-pixbuf:2[introspection] x11-libs/gtk+:3[introspection] x11-libs/pango[introspection] dbus? ( sys-apps/dbus ) libsecret? ( >=app-crypt/libsecret-0.14[introspection] ) webkit? ( dev-python/mako >=net-libs/webkit-gtk-1.10:3[introspection] ) ) python? ( || ( =dev-lang/python-3.3* =dev-lang/python-3.2* ) ) python? ( || ( =dev-lang/python-3.3*[xml] =dev-lang/python-3.2*[xml] ) )
+RDEPEND=>=dev-libs/glib-2.34.0:2 >=dev-libs/libxml2-2.7.8:2 >=x11-libs/gtk+-3.6:3[introspection] >=x11-libs/gdk-pixbuf-2.18.0:2 >=dev-libs/gobject-introspection-0.10.0 >=dev-libs/libpeas-0.7.3[gtk,python?] >=dev-libs/totem-pl-parser-3.2.0 >=net-libs/libsoup-2.26:2.4 >=net-libs/libsoup-gnome-2.26:2.4 media-libs/gst-plugins-base:1.0[introspection] media-libs/gstreamer:1.0[introspection] >=sys-libs/tdb-1.2.6 dev-libs/json-glib visualizer? ( >=media-libs/clutter-1.8:1.0 >=media-libs/clutter-gst-1.9.92:2.0 >=media-libs/clutter-gtk-1.0:1.0 >=x11-libs/mx-1.0.1:1.0 media-plugins/gst-plugins-libvisual:1.0 ) cdr? ( >=app-cdr/brasero-2.91.90 ) daap? ( >=net-libs/libdmapsharing-2.9.16:3.0 <net-libs/libdmapsharing-2.9.19:3.0 media-plugins/gst-plugins-soup:1.0 ) libsecret? ( >=app-crypt/libsecret-0.14 ) html? ( >=net-libs/webkit-gtk-1.10:3 ) libnotify? ( >=x11-libs/libnotify-0.7.0 ) lirc? ( app-misc/lirc ) python? ( >=dev-python/pygobject-3.0:3[python_targets_python3_2(-)?,python_single_target_python3_2(+)?] ) udev? ( virtual/udev[gudev] ipod? ( >=media-libs/libgpod-0.7.92[udev] ) mtp? ( >=media-libs/libmtp-0.3 ) ) zeitgeist? ( gnome-extra/zeitgeist ) media-plugins/gst-plugins-soup:1.0 media-plugins/gst-plugins-libmms:1.0 || ( media-plugins/gst-plugins-cdparanoia:1.0 media-plugins/gst-plugins-cdio:1.0 ) media-plugins/gst-plugins-meta:1.0 media-plugins/gst-plugins-taglib:1.0 x11-themes/gnome-icon-theme-symbolic upnp-av? ( >=media-libs/grilo-0.2:0.2 >=media-plugins/grilo-plugins-0.2:0.2[upnp-av] ) python? ( x11-libs/gdk-pixbuf:2[introspection] x11-libs/gtk+:3[introspection] x11-libs/pango[introspection] dbus? ( sys-apps/dbus ) libsecret? ( >=app-crypt/libsecret-0.14[introspection] ) webkit? ( dev-python/mako[python_targets_python3_2(-)?,python_single_target_python3_2(+)?] >=net-libs/webkit-gtk-1.10:3[introspection] ) )
 REQUIRED_USE=ipod? ( udev ) mtp? ( udev ) dbus? ( python ) webkit? ( python )
 SLOT=0
 SRC_URI=mirror://gnome/sources/rhythmbox/3.0/rhythmbox-3.0.tar.xz
-_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	60f01dcce699345bbe95db0476914874	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	python	7aff825f110c83fa8c77f14ba3c71c47	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=54016b50024b17b51399c43692cf1b19
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	60f01dcce699345bbe95db0476914874	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	python-single-r1	007be4716d2d4dad097178465e474957	python-utils-r1	d55ee5d992fc65859c29c73a24a24299	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=e4ecb99b87d51641b5b73664b0fea3fb
