@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/rhythmbox
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.245 2013/09/13 20:42:56 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.246 2013/09/15 20:43:04 nirbheek Exp $
+
+  15 Sep 2013; Nirbheek Chauhan <nirbheek@gentoo.org> rhythmbox-3.0-r1.ebuild:
+  Use python-single-r1 like 2.99.1, and remove support for python3_3 (beaker
+  doesn't support it yet)
 
 *rhythmbox-3.0-r1 (13 Sep 2013)
 
